# MitoR

./: .gitignore  README.md  Readme.md  setup.cfg
demo/: mixed_cell_names.csv  scRNAseq_bench2.h5ad
src/mitor/: __init__.py  mitor.py  model.py  pipeline.py
