[metadata]
name = mitor
version = 0.1.0
description = A tool for predicting T-cell mitochondria hijacking from tumor single-cell RNA sequencing data
author = your_name
author_email = your_email
url = https://github.com/xxx/MITOR
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
install_requires =
    anndata
    numpy
    pandas
    torch
    matplotlib
    seaborn
    scipy
    scikit_learn
    scanpy
python_requires = >=3.7

[options.packages.find]
where = src
